src/global/core-modules/leads-mgmt/inbound-leads/objects/InboundLeadFieldMapping__mdt/InboundLeadFieldMapping__mdt.object-meta.xml
<CustomObject>
    <description>Configuration object that specifies the mapping of fields from the temporary InboundLead__c records to their corresponding target fields in the standard Lead object / custom Lead Interaction Entry object.</description>
    <label>Inbound Lead Field Mapping</label>
    <pluralLabel>Inbound Lead Field Mappings</pluralLabel>
</CustomObject>