src/global/core-modules/leads-mgmt/inbound-leads/objects/InboundLeadFieldMapping__mdt/fields/InboundLeadField__c.field-meta.xml
<CustomField>
    <fullName>InboundLeadField__c</fullName>
    <label>Inbound Lead Field</label>
    <metadataRelationshipControllingField>InboundLeadFieldMapping__mdt.InboundLeadObject__c</metadataRelationshipControllingField>
    <referenceTo>EntityParticle</referenceTo>
    <relationshipLabel>InboundLeadObjectFields</relationshipLabel>
    <relationshipName>InboundLeadObjectFields</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>