src/global/core-modules/leads-mgmt/inbound-leads/objects/InboundLeadFieldMapping__mdt/fields/InboundLeadObject__c.field-meta.xml
<CustomField>
    <fullName>InboundLeadObject__c</fullName>
    <description>Must always be the &quot;InboundLead__c&quot; object.</description>
    <inlineHelpText>Make sure you select &quot;Inbound Lead&quot; object</inlineHelpText>
    <label>Inbound Lead Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>InboundLeadObjects</relationshipLabel>
    <relationshipName>InboundLeadObjects</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>