src/global/core-modules/leads-mgmt/inbound-leads/objects/InboundLeadFieldMapping__mdt/fields/LeadField__c.field-meta.xml
<CustomField>
    <fullName>LeadField__c</fullName>
    <inlineHelpText>Choose only between &quot;Lead&quot; or &quot;Lead Interaction Entry&quot; objects</inlineHelpText>
    <label>Lead / Interaction Field</label>
    <metadataRelationshipControllingField>InboundLeadFieldMapping__mdt.LeadObject__c</metadataRelationshipControllingField>
    <referenceTo>EntityParticle</referenceTo>
    <relationshipLabel>LeadObjectFields</relationshipLabel>
    <relationshipName>LeadObjectFields</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>