src/global/core-modules/leads-mgmt/inbound-leads/objects/InboundLeadFieldMapping__mdt/fields/LeadObject__c.field-meta.xml
<CustomField>
    <fullName>LeadObject__c</fullName>
    <inlineHelpText>Choose only between &quot;Lead&quot; or &quot;Lead Interaction Entry&quot; objects</inlineHelpText>
    <label>Lead / Interaction Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>LeadObject</relationshipLabel>
    <relationshipName>LeadObject</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>