src/global/core-modules/leads-mgmt/inbound-leads/objects/InboundLeadFieldMapping__mdt/validationRules/ForceSelectionOfInboundLeadObject.validationRule-meta.xml
<ValidationRule>
    <fullName>ForceSelectionOfInboundLeadObject</fullName>
    <active>true</active>
    <errorConditionFormula>InboundLeadObject__r.DeveloperName != &apos;InboundLead&apos;</errorConditionFormula>
    <errorDisplayField>InboundLeadObject__c</errorDisplayField>
    <errorMessage>Please make sure you select &quot;Inbound Lead&quot; object.</errorMessage>
</ValidationRule>