src/global/core-modules/leads-mgmt/inbound-leads/objects/InboundLeadFieldMapping__mdt/validationRules/ForceSelectionOfLeadObject.validationRule-meta.xml
<ValidationRule>
    <fullName>ForceSelectionOfLeadObject</fullName>
    <active>true</active>
    <errorConditionFormula>AND(LeadObject__r.DeveloperName != &apos;Lead&apos;, LeadObject__r.DeveloperName != &apos;LeadInteractionEntry&apos;)</errorConditionFormula>
    <errorDisplayField>LeadObject__c</errorDisplayField>
    <errorMessage>Please make sure you select &quot;Lead&quot; or &quot;Lead Interaction Entry&quot;object.</errorMessage>
</ValidationRule>