src/global/core-modules/leads-mgmt/inbound-leads/objects/InboundLeadFieldMapping__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>InboundLeadObject__c</columns>
    <columns>InboundLeadField__c</columns>
    <columns>LeadObject__c</columns>
    <columns>LeadField__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>